@@ -7,6 +7,9 @@ UNRELEASED, S3QL TIP
 
   * Retry on timeout when transmitting data to remote server.
   
+  * Do not free mount point when terminating due to unhandled 
+    exception in background thread. 
+  
 2011-10-06, S3QL 1.4
  
   * Metadata is now always LZMA compressed, mount.s3ql's --compress
